# RBE-Foundations-Group2

./: EEToJointVelocity.srv  FK_node.txt  Gripper Sequence  Hunter FK IK Code  Jacobian Snippet Code (Hunter).py  Johns IK File  JointToEEVelocity.srv  README.md  incremental_pos_ref.py  jacobian_diagnostic.py  openmx_fwd.py  openmx_inv.py  openmx_jacobian.py  pd_control_log_20251202_182405.txt  pd_control_log_20251202_183528.txt  pd_control_log_20251202_184445.txt  pd_control_log_20251209_113945.txt
Part3/: 0.0.txt  CMakeLists.txt  README.md  neg_0.6.txt  pd_controller_direct.py  plot_pd_results.py  pos_0.6.txt  set_current_mode.py
install/: local_setup.sh  setup.sh
install/cmake_modules/share/cmake_modules/: local_setup.sh  package.sh
install/cmake_modules/share/cmake_modules/cmake/: cmake_modules-extras.cmake
install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.sh  package.sh
install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/: local_setup.sh  package.sh
install/dynamixel_sdk_examples/share/dynamixel_sdk_examples/: local_setup.sh  package.sh
install/dynamixel_workbench/share/dynamixel_workbench/: local_setup.sh  package.sh
install/dynamixel_workbench_toolbox/share/dynamixel_workbench_toolbox/: local_setup.sh  package.sh
install/joint_pd_controller_py/share/joint_pd_controller_py/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/open_manipulator/share/open_manipulator/: local_setup.sh  package.sh
install/open_manipulator_msgs/share/open_manipulator_msgs/: local_setup.sh  package.sh
install/open_manipulator_x_controller/share/open_manipulator_x_controller/: local_setup.sh  package.sh
install/open_manipulator_x_description/share/open_manipulator_x_description/: local_setup.sh  package.sh
install/open_manipulator_x_libs/share/open_manipulator_x_libs/: local_setup.sh  package.sh
install/openmx/share/openmx/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/openmx_interfaces/share/openmx_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/openmx_interfaces/share/openmx_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_openmx_interfaces__rosidl_generator_cExport-noconfig.cmake  openmx_interfacesConfig.cmake  (+19 more)
install/rbe500-example/share/rbe500-example/: local_setup.sh  package.sh
install/rbe500_example_py/share/rbe500_example_py/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robotis_manipulator/share/robotis_manipulator/: local_setup.sh  package.sh
log/: latest_build
open_manipulator_pd_control/: CMakeLists.txt  README.md  automated_test.py  package.xml  pd_controller_direct.py  pd_controller_node.py  plot_pd_results.m  test_client.py
open_manipulator_pd_control/launch/: pd_controller.launch.py
openmx_src/openmx/: setup.cfg  setup.py
openmx_src/openmx/openmx/: ik_client.py  ik_team2.py  openmx_fwd.py  openmx_inv.py  openmx_inv.py.backup  openmx_kin.py.backup  openmx_params.py
openmx_src/openmx_interfaces/: CMakeLists.txt  package.xml
openmx_src/openmx_interfaces/srv/: InverseKinematics.srv
src/: README.md
src/joint_pd_controller_py/: package.xml  plots_pd_results.py  plots_py.py  setup.cfg  setup.py  test_client.py
src/joint_pd_controller_py/joint_pd_controller_py/: pd_controller.py
src/joint_pd_controller_py/srv/: SetJointPosition.srv
src/openmx/: setup.py
src/openmx/openmx/: ik_client.py  openmx_fwd.py  openmx_increment_pos_ref.py  openmx_inv.py  openmx_jacobian.py  openmx_trajectory_recorder.py  trajectory_data.csv
src/openmx_interfaces/: CMakeLists.txt
src/openmx_interfaces/srv/: EE2JointVel.srv  InverseKinematics.srv  JointVel2EE.srv
src/rbe500-example/: CMakeLists.txt
src/rbe500-example/src/: basic_robot_control.cpp  kinematics.cpp
src/rbe500_example_py/rbe500_example_py/: basic_pne.py  basic_rcontol500_pub.py  basic_rcontrol500_fk.py  basic_rcontrol500_fk_j.py  basic_rcontrol500_fk_try.py  basic_rcontrol500_ik.py  basic_rcontrol500_ik_john.py  basic_robot_control.py  fk_team_2.py  ik_team_2.py  rcontrol_with_fk_gripper.py  robot_control_with_fk.py
(+71 files in other folders)
